--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "demo1",
   "version": "8.2.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "/client",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^42.0.0",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@formatjs/intl-pluralrules": "5.2.4",
