--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
+    "react-super-responsive-table": "^6.0.2",
     "react-table": "^7.7.0",
     "react-toastify": "^11.0.5",
     "react-topbar-progress-indicator": "4.1.1",
