--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 HOST=192.168.0.18
 PORT=3011
+REACT_APP_ENVIRONMENT=development
+# REACT_APP_ENVIRONMENT=production
 REACT_APP_BASE_LAYOUT_CONFIG_KEY=metronic-react-demo1-8150
 REACT_APP_API_URL=http://192.168.0.18:8080
 # REACT_APP_API_URL=https://aff73c5018ae.ngrok-free.app/
