--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
-HOST=192.168.0.18
+HOST=localhost
 PORT=3011
-REACT_APP_ENVIRONMENT=development
-# REACT_APP_ENVIRONMENT=production
+# HOST=192.168.88.218
+# REACT_APP_ENVIRONMENT=development
+REACT_APP_ENVIRONMENT=production
 REACT_APP_BASE_LAYOUT_CONFIG_KEY=metronic-react-demo1-8150
-REACT_APP_API_URL=http://192.168.0.18:8080
+REACT_APP_API_URL=http://localhost:8080
+REACT_APP_SOCKET_URL=http://localhost:3001
 # REACT_APP_API_URL=https://aff73c5018ae.ngrok-free.app/
 # REACT_APP_THEME_API_URL=http://192.168.88.229:8080/api
 # REACT_APP_THEME_API_URL=https://aff73c5018ae.ngrok-free.app//api
